{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 94,
  "lineage": "8adf7fd0-3752-7940-cbe3-a28fb37d43e7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ni-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0700423ca57e8b088",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-04a5e743886380ad1",
            "domain": "vpc",
            "id": "eipalloc-0700423ca57e8b088",
            "instance": "i-05d8c1f3aaac118da",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d9a66d7c3a49f81d",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-23-20-94-247.compute-1.amazonaws.com",
            "public_ip": "23.20.94.247",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.ans-igw",
            "aws_network_interface.ans-ni",
            "aws_security_group.web",
            "aws_subnet.ans-subnet",
            "aws_vpc.ans-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ni1-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ec469237bd6acad5",
            "associate_with_private_ip": "10.0.1.53",
            "association_id": "eipassoc-037cc2d9596ab37b7",
            "domain": "vpc",
            "id": "eipalloc-0ec469237bd6acad5",
            "instance": "i-085b5fbef70a5fb80",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f41de53c4736722c",
            "private_dns": "ip-10-0-1-53.ec2.internal",
            "private_ip": "10.0.1.53",
            "public_dns": "ec2-34-192-42-115.compute-1.amazonaws.com",
            "public_ip": "34.192.42.115",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.ans-igw",
            "aws_network_interface.ans1-ni",
            "aws_security_group.web",
            "aws_subnet.ans-subnet",
            "aws_vpc.ans-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b93ce03dcbcb10f6",
            "arn": "arn:aws:ec2:us-east-1:431843250375:instance/i-085b5fbef70a5fb80",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-085b5fbef70a5fb80",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Kub",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0f41de53c4736722c"
              }
            ],
            "primary_network_interface_id": "eni-0f41de53c4736722c",
            "private_dns": "ip-10-0-1-53.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.53",
            "public_ip": "34.192.42.115",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07418150d66b27712",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e9a341349fb3f3b5",
            "tags": {
              "Name": "Server_2"
            },
            "tags_all": {
              "Name": "Server_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02666b3428f9d75f1"
            ]
          },
          "dependencies": [
            "aws_network_interface.ans1-ni",
            "aws_security_group.web",
            "aws_subnet.ans-subnet",
            "aws_vpc.ans-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sever-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b93ce03dcbcb10f6",
            "arn": "arn:aws:ec2:us-east-1:431843250375:instance/i-05d8c1f3aaac118da",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05d8c1f3aaac118da",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Kub",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0d9a66d7c3a49f81d"
              }
            ],
            "primary_network_interface_id": "eni-0d9a66d7c3a49f81d",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "public_ip": "23.20.94.247",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0421b65acf1fd14aa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e9a341349fb3f3b5",
            "tags": {
              "Name": "Server_1"
            },
            "tags_all": {
              "Name": "Server_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02666b3428f9d75f1"
            ]
          },
          "dependencies": [
            "aws_network_interface.ans-ni",
            "aws_security_group.web",
            "aws_subnet.ans-subnet",
            "aws_vpc.ans-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ans-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431843250375:internet-gateway/igw-07ca60d993272f431",
            "id": "igw-07ca60d993272f431",
            "owner_id": "431843250375",
            "tags": {
              "Name": "ansible-igw"
            },
            "tags_all": {
              "Name": "ansible-igw"
            },
            "vpc_id": "vpc-0c6b9c587fc6ae74d"
          },
          "dependencies": [
            "aws_vpc.ans-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "ans-ni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431843250375:network-interface/eni-0d9a66d7c3a49f81d",
            "id": "eni-0d9a66d7c3a49f81d",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:18:8a:17:5d:fd",
            "owner_id": "431843250375",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-02666b3428f9d75f1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e9a341349fb3f3b5"
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.ans-subnet",
            "aws_vpc.ans-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "ans1-ni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431843250375:network-interface/eni-0f41de53c4736722c",
            "id": "eni-0f41de53c4736722c",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:31:33:d7:98:7f",
            "owner_id": "431843250375",
            "private_ip": "10.0.1.53",
            "private_ip_list": [
              "10.0.1.53"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.53"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-02666b3428f9d75f1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e9a341349fb3f3b5"
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.ans-subnet",
            "aws_vpc.ans-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ans-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431843250375:route-table/rtb-092f75a1d8d1ba8d6",
            "id": "rtb-092f75a1d8d1ba8d6",
            "owner_id": "431843250375",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07ca60d993272f431",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Dev-crt"
            },
            "tags_all": {
              "Name": "Dev-crt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6b9c587fc6ae74d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ans-igw",
            "aws_vpc.ans-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05685a57658e7de40",
            "route_table_id": "rtb-092f75a1d8d1ba8d6",
            "subnet_id": "subnet-0e9a341349fb3f3b5"
          },
          "dependencies": [
            "aws_internet_gateway.ans-igw",
            "aws_route_table.ans-rt",
            "aws_subnet.ans-subnet",
            "aws_vpc.ans-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431843250375:security-group/sg-02666b3428f9d75f1",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02666b3428f9d75f1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "431843250375",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Dev-web"
            },
            "tags_all": {
              "Name": "Dev-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6b9c587fc6ae74d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ans-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ans-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431843250375:subnet/subnet-0e9a341349fb3f3b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9a341349fb3f3b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "431843250375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dev-subnet"
            },
            "tags_all": {
              "Name": "Dev-subnet"
            },
            "vpc_id": "vpc-0c6b9c587fc6ae74d"
          },
          "dependencies": [
            "aws_vpc.ans-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ans-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431843250375:vpc/vpc-0c6b9c587fc6ae74d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03e58a9fb814e30e5",
            "default_route_table_id": "rtb-02548bf93b4c2d560",
            "default_security_group_id": "sg-006fb7f11d1b6ba5e",
            "dhcp_options_id": "dopt-58763322",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c6b9c587fc6ae74d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02548bf93b4c2d560",
            "owner_id": "431843250375",
            "tags": {
              "Name": "ansible_vpc"
            },
            "tags_all": {
              "Name": "ansible_vpc"
            }
          }
        }
      ]
    }
  ]
}